
AM_CXXFLAGS =  ${LUA_CFLAGS} ${SDL_CFLAGS} -Wall -Werror -Wextra -Wno-unused-parameter -Wpointer-arith -Wcast-align -Wconversion -pedantic -ansi -std=c++98

bin_PROGRAMS = rts
rts_SOURCES = main.cpp window.cpp game.cpp utilities.cpp model.cpp audio.cpp terrain.cpp \
	      aibase.cpp dimension.cpp font.cpp unit.cpp aipathfinding.cpp vector3d.cpp luawrapper.cpp \
	      unitinterface.cpp gui.cpp environment.cpp console.cpp linkedlist.cpp textures.cpp \
	      effect.cpp camera.cpp gamegui.cpp randomgenerator.cpp networking.cpp filesystem.cpp \
	      paths.cpp

